[package]
name = "cdumay_error_http"
version = "0.1.3"
edition = "2024"
authors = ["Cédric Dumay <cedric.dumay@gmail.com>"]
description = "A Rust Library for JSON error"
documentation = "https://docs.rs/cdumay_error_http"
homepage = "https://github.com/cdumay/cdumay_error_http"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/cdumay/cdumay_error_http"

[dependencies]
cdumay_core = "0.1"
serde-value = "0.7"
